# Opennyai

./: pyproject.toml
opennyai/rhetorical_roles/: infer_data_prep.py  rhetorical_roles.py
opennyai/summarizer/models/: model_builder.py
opennyai/summarizer/others/: args.py  tokenization.py
opennyai/utils/: download.py
