[tool.poetry]
name = "opennyai"
version = "0.0.13"
description = "A SpaCy pipeline and models for NLP on indian legal text."
authors = ["Aman Tiwari <work.amantiwari@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8 || ^3.9 || ^3.10"

spacy = ">=3.7.0,<3.8.0" # CHANGED: Updated for Pydantic v2 compatibility
pandas = ">1.2.4"
beautifulsoup4 = ">=4.10.0"
torch = ">=1.12.1"
levenshtein = "^0.23.0"
multiprocess = "^0.70.15"
spacy-transformers = ">=1.3.0,<1.4.0" # CHANGED: Updated for spaCy 3.7.x compatibility
scikit-learn = "^1.3.2"
pytest = "^7.4.3"
prettytable = ">=3.1.1"
nltk = ">=3.6"
transformers = ">=4.30.0,<4.40.0" # CHANGED: Replaced 'pytorch-transformers' with 'transformers'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"